--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,6 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-p ul li{
-    display: inline;
-    margin-right: 20px;
-}
 a {
     text-decoration: none;
     color: #999;
@@ -28,6 +24,11 @@ h1 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
+    font-size: 1.5em;
+    line-height: 1.4em;
+    color: #333;
+}
+p ul li{
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
