--- a/css/main.css
+++ b/css/main.css
@@ -39,11 +39,6 @@ ul.posts {
 }
 
 ul.posts li {
-    list-style: none;
-}
-
-p ul li{
+    margin: 20px auto 40px; 
     font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
 }
