--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-p {
+p, p ul li {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
@@ -35,9 +35,5 @@ footer {
 
 ul.posts { 
     margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-p ul li {
     font-size: 1.5em;
 }
