--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,11 @@ p {
     line-height: 1.4em;
     color: #333;
 }
+ul li {
+    font-size: 1.5em;
+    line-height: 1.4em;
+    color: #333;
+}
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
@@ -38,6 +43,4 @@ ul.posts {
     font-size: 1.5em;
 }
 
-ul.posts li {
-    list-style: disc;
-}
+
