--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/project">Project</a></li>
+        		<li><a href="/resume">Resume</a></li>
+        		<li><a href="/project">Projects</a></li>
     		</ul>
 		</nav>
 		<div class="container">
