--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ ul.posts {
 }
 
 ul.posts li {
-    <!--list-style: none;-->
+    /*list-style: none;*/
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
