--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ ul.posts {
     font-size: 1.5em;
 }
 
-ul.posts li {
+ul.posts li a{
     /*list-style: none;*/
     font-size: 1.5em;
     line-height: 1.4em;
