--- a/css/main.css
+++ b/css/main.css
@@ -42,8 +42,8 @@ ul.posts {
     font-size: 1.5em;
 }
 
-ul.posts li a{
-    /*list-style: none;*/
+ul.posts li {
+    list-style: disc;
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
