--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-        		<li><a href="/resume/Lakshmi Venkatasubramanian_resume.pdf">Resume</a>
+        		<!--<li><a href="/resume/Lakshmi Venkatasubramanian_resume.pdf">Resume</a>-->
         		<li><a href="/project">Projects</a></li>
     		</ul>
 		</nav>
