--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
     		</ul>
 		</nav>
 		<div class="container">
+		font-size: 1.1em
     		{{ content }}
 		</div><!-- /.container -->
 		<footer>
